--- a/src/main/resources/fxml/register.fxml
+++ b/src/main/resources/fxml/register.fxml
@@ -16,9 +16,9 @@
             <Insets bottom="75.0" left="150.0" right="150.0" top="75.0" />
          </VBox.margin>
          <children>
-            <TextField fx:id="username" layoutX="23.0" layoutY="111.0" prefHeight="25.0" prefWidth="254.0" />
-            <PasswordField fx:id="password" layoutX="23.0" layoutY="146.0" prefHeight="25.0" prefWidth="254.0" />
-            <Button fx:id="registerButton" layoutX="23.0" layoutY="180.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="254.0" text="Registrieren">
+            <TextField fx:id="username" layoutX="23.0" layoutY="111.0" prefHeight="25.0" prefWidth="254.0" promptText="Username" />
+            <PasswordField fx:id="password" layoutX="23.0" layoutY="146.0" prefHeight="25.0" prefWidth="254.0" promptText="Password" />
+            <Button fx:id="button" layoutX="23.0" layoutY="180.0" mnemonicParsing="false" onAction="#register" prefHeight="25.0" prefWidth="254.0" text="Registrieren">
                <font>
                   <Font name="Arial" size="12.0" />
                </font>
